--- a/WebCongNghe/Views/Products/Details.cshtml
+++ b/WebCongNghe/Views/Products/Details.cshtml
@@ -57,7 +57,7 @@
                                         <span>Giá bán tại ShopCongNghe:</span>
                                         <div class="giamoi font-weight-bold">@String.Format("{0:n0} đ ", p.Gia - (p.Gia * p.KhuyenMai)/100)</div></div>
                                         <div class="tietkiem">Tiết kiệm: <b>@String.Format("{0:n0} đ ", (p.Gia * p.KhuyenMai)/100)</b> <span class="sale">-20%</span>
-                                        <div>Hiện còn: @NumberOfProductOfTheSameName</div>
+                                        <div>Hiện còn: @NumberOfProductOfTheSameName sản phẩm</div>
                                     </div>
                                 </div>
                                 <div class="uudai my-3">
