--- a/WebCongNghe/Views/Shared/_Layout.cshtml
+++ b/WebCongNghe/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <title>Dealbook-Mua sách trực tuyến giá rẻ nhất</title>
+    <title>WebCongNghe.Pro - Đồ công nghệ </title>
     <meta name="description"
         content="Mua sách online hay, giá tốt nhất, combo sách hot bán chạy, giảm giá cực khủng cùng với những ưu đãi như miễn phí giao hàng, quà tặng miễn phí, đổi trả nhanh chóng. Đa dạng sản phẩm, đáp ứng mọi nhu cầu.">
     <meta name="keywords" content="nhà sách online, mua sách hay, sách hot, sách bán chạy, sách giảm giá nhiều">
