--- a/WebCongNghe/wwwroot/css/product-item.css
+++ b/WebCongNghe/wwwroot/css/product-item.css
@@ -1,4 +1,4 @@
-*{
+﻿*{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -1059,12 +1059,18 @@ h6.card-title.ten {
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
-    padding: 8px;
+    padding: 5px;
+    word-wrap: anywhere;
+    text-align: center;
+}
+th{
+    font-size: 15px;
 }
 
 table {
     border-collapse: collapse;
     width: 100%;
+    table-layout:fixed;
 }
 
 .donhang-table table th {
@@ -1076,5 +1082,7 @@ h3.account-header {
     color: #9d9d9d;
     font-size: 18px;
 }
+
+
 
 
